# Super-Duper-Metroid

./: .gitignore  CHANGES TO MAKE.txt  IPS_Patcher.py  LICENSE  MANIFEST.in  README.md  ROM_Patcher.PY  ROM_Patcher.py  SM_Constants.py  SM_Doors_VERY_WIP.py  SM_Interface.py  hexhelper.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python.yml
ASM Documentation/: Door Data Format.txt  Important RAM.txt  MODIFIED ROUTINE EPSILON.txt  MODIFIED ROUTINE ZETA.txt  NEW ROUTINE ALPHA.txt  NEW ROUTINE BETA.txt  NEW ROUTINE DELTA.txt  NEW ROUTINE GAMMA.txt  itemFuncReplacement.txt  multiworldGivePlayerItem.txt  multiworldJumpToFunction.txt
ASM Documentation/MISC NOTES & APOCRYPHA/: FUNC 858080 - MAIN.txt  FUNC 858241.txt  MEMORY ALLOCATION.txt  README.txt  ROUTINE - MAINBOXDRAW.txt  SUBROUTINE - ADD BOTTOM BOX LOOP.txt  TO INVESTIGATE.txt  WRITING NEW ROUTINES.txt
docs/: docs.txt
docs/ASM Documentation/: CUSTOM START WITH INTRO.txt  Important SM ROM data by bank.txt  MODIFIED ROUTINE ALPHA.txt  Message Box Format Info.txt  NEW ROUTINE ALPHA.txt  SAVE ROUTINE NOTES.txt  awardStartingItemsFunction.txt  eyedoor_fix.txt  itemFuncReplacement.txt  multiworldGivePlayerItem.txt  multiworldJumpToFunction.txt  randomFunctionToMakeAnRTLintoAnRTS.txt
docs/ASM Documentation/MISC NOTES & APOCRYPHA/: 858241 func 1.txt  858241 func 2.txt  DATA - PROMPT 1C1F VALS.txt  DATA - X VALS.txt  FUNC 85844C.txt  FUNC 858574.txt  MESSAGEBOX ID INVESTIGATION.txt  Messagebox Tilemap Notes.txt  OUCH.txt  README.txt  ROUTINE - BIGBOXWRAPPER.txt  SM DEBUGGING.txt  SM MESSAGEBOX DEBUGGING..txt
src/SuperDuperMetroid/: DoorParser.py  IPS_Patcher.py  ROM_Patcher.py  SM_Constants.py  SM_Interface.py  SM_Room_Header_Data.py  __main__.py  hexhelper.py
src/SuperDuperMetroid/BPSPatch/: BPS_Patcher.pyx
src/SuperDuperMetroid/Patches/Mandatory Patches/: eye_fix.ips  eye_fix.ips.bak
src/SuperDuperMetroid/Patches/QoL/: enable_moonwalk_by_default.ips
src/SuperDuperMetroid/Patches/Tweaks/: no_ln_chozo_inventory_check.ips
src/SuperDuperMetroid/__pyinstaller/: __init__.py  hook-SuperDuperMetroid.py
test/: test_rom_patcher.py
