[metadata]
name = SuperDuperMetroid
version = 0.1.1
author = Samuel Roy
description = A Super Metroid patching utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SolventMercury/Super-Duper-Metroid
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.package_data]
* = *.bin, Patches/*.ips

[options.packages.find]
where = src
