[metadata]
name = SuperDuperMetroid
version = 2.2.1
author = Samuel Roy
description = A Super Metroid patching utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SolventMercury/Super-Duper-Metroid
project_urls =
    Bug Tracker = https://github.com/SolventMercury/super-Duper-Metroid/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.package_data]
* = *.bin, Patches/*/*.ips

[options.packages.find]
where = src

#
# Entry Points for PyInstaller
# ---------------------------------
[options.entry_points]
pyinstaller40 =
    # .. _hook_registration:
    #
    # **Hook registration**: This entry point refers to a function
    # that will be invoked with no parameters. It must return a
    # sequence of strings, each element of which provides an
    # additional absolute path to search for hooks. This is equivalent
    # to passing the ``additional-hooks-dir`` `command-line option
    # <https://pyinstaller.readthedocs.io/en/stable/usage.html#what-to-bundle-where-to-search>`_
    # to PyInstaller for each string in the sequence.
    #
    # In this project, the function is ``get_hook_dirs``.
    hook-dirs = SuperDuperMetroid.__pyinstaller:get_hook_dirs
